--- a/HW6/Problem2R.ipynb
+++ b/HW6/Problem2R.ipynb
@@ -6,7 +6,7 @@
       "name": "Problem2R.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOQGez72ZulAc6BI+fNz6TA",
+      "authorship_tag": "ABX9TyNwnT+rKvY4HfAPu6RiCoKQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,13 +39,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 104,
       "metadata": {
         "id": "coREPFawb6wf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d76dd00e-dc83-4315-a4da-0dae2851b527"
+        "outputId": "484d9d5d-fa6e-4b29-f626-957f5ef2111a"
       },
       "outputs": [
         {
@@ -90,9 +90,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T01lRSzsciFM",
-        "outputId": "7285d6e6-ee7b-478a-ca5d-53190724314a"
+        "outputId": "18678d2c-d03e-4911-a06e-946d588b62d4"
       },
-      "execution_count": 36,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,9 +128,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I9atbjLeaB4w",
-        "outputId": "67256239-c104-4035-9f8f-48acf015d2c7"
+        "outputId": "af0253c4-3ba9-4d46-fcb4-26149a4af81c"
       },
-      "execution_count": 37,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,9 +166,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5OvZyjvKZNtK",
-        "outputId": "dc1d99ff-dba6-46b0-e898-9aab30acb532"
+        "outputId": "94c96787-7b2b-404c-b25a-99cb20a48f6f"
       },
-      "execution_count": 38,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,9 +199,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8l15K7uZaQd1",
-        "outputId": "a6902de0-d7e1-4378-850f-d91e7d93d10a"
+        "outputId": "c9497e8d-87ab-48b3-acf5-660706c9d2a4"
       },
-      "execution_count": 39,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,9 +232,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WgUkBja-ki9z",
-        "outputId": "a24e930b-3eff-4a70-f092-566fbb974d84"
+        "outputId": "cf3d4371-0010-4c6d-88e3-4b3581b4e0da"
       },
-      "execution_count": 40,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,9 +270,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9rNzG27ck0Dl",
-        "outputId": "9f45cdad-c019-45cd-b632-0469fe90ec50"
+        "outputId": "d0e84885-d245-4c21-8558-9a14e46ccf9f"
       },
-      "execution_count": 41,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,9 +317,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iRXjPzchbb8B",
-        "outputId": "edfce2c2-0c07-485b-b4ef-3b9735b05ca9"
+        "outputId": "b090e709-dd8a-4e1b-9594-f0826db7d636"
       },
-      "execution_count": 42,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,9 +356,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_Wmy8tttbXFY",
-        "outputId": "4373f6b6-0bff-4840-e197-14516683a515"
+        "outputId": "a984d890-49ef-4216-a138-471b24974e55"
       },
-      "execution_count": 43,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
@@ -406,9 +406,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CME_DT3idWM5",
-        "outputId": "435bffa6-04d6-4b0a-b7cb-b67485320029"
+        "outputId": "04d6a5a1-9b46-4768-81af-ffcf090afb29"
       },
-      "execution_count": 44,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "stream",
@@ -431,9 +431,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rD4mGz-fdlCT",
-        "outputId": "4ac9e588-6558-40f7-bd08-a24204cada22"
+        "outputId": "a202e5c1-0e20-4145-e1bd-921b831f59b8"
       },
-      "execution_count": 45,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,9 +474,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nJQBKmgVeLaA",
-        "outputId": "2f478603-abf0-40ee-fe73-bbbb2dd315f2"
+        "outputId": "437adb11-dd96-49b4-d7de-350d1699156a"
       },
-      "execution_count": 46,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "stream",
@@ -501,9 +501,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JvioITV3fkwE",
-        "outputId": "da812d0e-2b2f-4bd5-8cda-cb400166d259"
+        "outputId": "fbe31ad1-3644-4dcd-b80f-66dd54804717"
       },
-      "execution_count": 47,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "stream",
@@ -545,9 +545,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QATMw0BfWtdK",
-        "outputId": "15e01bb5-675d-491b-82a2-245c119c94a4"
+        "outputId": "4c5a8b2d-f3c1-4f06-d9c1-84b99e249141"
       },
-      "execution_count": 48,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "stream",
@@ -854,7 +854,7 @@
       "metadata": {
         "id": "LCvNu3gGjMAV"
       },
-      "execution_count": 49,
+      "execution_count": 118,
       "outputs": []
     },
     {
@@ -877,12 +877,12 @@
       ],
       "metadata": {
         "id": "xPPKCddPkC_U",
-        "outputId": "6c56fe8c-5a87-4ca5-d8bd-ac8049ac6558",
+        "outputId": "12b62ff2-5975-4bf6-82d2-50d58191402a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": 119,
       "outputs": [
         {
           "output_type": "stream",
@@ -924,13 +924,13 @@
       ],
       "metadata": {
         "id": "l4ykL57mk1-n",
-        "outputId": "8a62cd2e-504d-44d0-fe6a-4e3fcbab6838",
+        "outputId": "e66f7077-bbdb-44c8-beed-612f35d0d7d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 497
         }
       },
-      "execution_count": 51,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "display_data",
@@ -977,12 +977,12 @@
       ],
       "metadata": {
         "id": "6ZJg_gwovFxl",
-        "outputId": "7fb2cc3f-dd6c-4d0b-fa6c-a3ca9bf5e030",
+        "outputId": "e9822c36-2ba2-466e-fd93-9bc8d9f58aeb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "stream",
@@ -1017,12 +1017,12 @@
       ],
       "metadata": {
         "id": "oPSJred8vz1u",
-        "outputId": "610354c7-69c4-416d-e550-3165fb87a0a5",
+        "outputId": "5f8e2ef4-0bfc-4a86-c6a4-a8318da3618f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 53,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "stream",
@@ -1073,18 +1073,18 @@
       "source": [
         "#accuarcy of cart model\n",
         "%%R\n",
-        "accuracy_predict_CART <- sum( predict_CART == Loans_TestDF$Approval)/ length(predict_CART)\n",
+        "accuracy_CART_model <- sum( predict_CART == Loans_TestDF$Approval)/ length(predict_CART)\n",
         "print('CART Model accuracy :')\n",
-        "accuracy_predict_CART * 100"
+        "accuracy_CART_model * 100"
       ],
       "metadata": {
         "id": "qOUBCNipzz5F",
-        "outputId": "20dc8a2e-5fd9-44b6-aa85-6008300e8ea0",
+        "outputId": "bb026cbd-724b-4c0e-f3f5-22f548691ad4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 54,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
@@ -1105,12 +1105,12 @@
       ],
       "metadata": {
         "id": "XnQHr-VbwQ2e",
-        "outputId": "5ec6aeaf-380f-4c39-8e45-99126d1d4a7d",
+        "outputId": "6f20686c-524e-4f1c-9791-66946539fddc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 55,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
@@ -1141,12 +1141,12 @@
       ],
       "metadata": {
         "id": "YsNy0MCZwu-l",
-        "outputId": "15eb41a1-11bc-49fc-d8ea-58f654ef3b96",
+        "outputId": "3529a60d-4575-47b5-ec32-9d7532cb873b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 56,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "stream",
@@ -1178,13 +1178,13 @@
       ],
       "metadata": {
         "id": "V6CRcJk8w_tp",
-        "outputId": "decbedd3-afe5-4658-9733-52966348c5c7",
+        "outputId": "5ea1a055-ca39-4f84-8011-52b9c75bd84c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 497
         }
       },
-      "execution_count": 57,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1214,12 +1214,12 @@
       ],
       "metadata": {
         "id": "uWrqfJOFypsL",
-        "outputId": "dc80aa48-8514-44c2-e943-4dba3a3db311",
+        "outputId": "a4018c29-f495-40c6-c5fc-31c4135347d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 58,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "stream",
@@ -1249,12 +1249,12 @@
       ],
       "metadata": {
         "id": "syB4Uty1y5dP",
-        "outputId": "3252d259-2ef1-4c0a-dda1-479152151ba9",
+        "outputId": "e0d8d918-2c6b-4cdb-949f-59b0a8993a1d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 59,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "stream",
@@ -1305,18 +1305,18 @@
       "source": [
         "#accuarcy of c5 model\n",
         "%%R\n",
-        "accuracy_predict_c5 <- sum( predict_c5 == Loans_TestDF$Approval)/ length(predict_c5)\n",
+        "accuracy_c5_model <- sum( predict_c5 == Loans_TestDF$Approval)/ length(predict_c5)\n",
         "print('c5 Model accuracy :')\n",
-        "accuracy_predict_c5 * 100"
+        "accuracy_c5_model * 100"
       ],
       "metadata": {
         "id": "jmJ17KV21vUg",
-        "outputId": "9657dfd1-7301-4382-b1f9-0b0b4b8ccc8c",
+        "outputId": "59d5afa4-eeab-4635-d7db-116d012bf5ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 60,
+      "execution_count": 129,
       "outputs": [
         {
           "output_type": "stream",
@@ -1343,12 +1343,12 @@
         "#plotting predict_CART accuracy and predict_c5 accuracy\n",
         "%%R\n",
         "labels <- c('CART', 'C5.0')\n",
-        "accuracy_model = c(accuracy_predict_CART, accuracy_predict_c5)"
+        "accuracy_model = c(accuracy_CART_model, accuracy_c5_model)"
       ],
       "metadata": {
         "id": "PuSyKQwszMqq"
       },
-      "execution_count": 61,
+      "execution_count": 130,
       "outputs": []
     },
     {
@@ -1360,13 +1360,13 @@
       ],
       "metadata": {
         "id": "uj-XBDD805Iy",
-        "outputId": "4fa3ef28-bf71-4fe5-d804-d90045aea302",
+        "outputId": "ec53ff5d-e186-4a8e-b009-f05191d1b208",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 497
         }
       },
-      "execution_count": 62,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "display_data",
