--- a/HW6/Problem1Python.ipynb
+++ b/HW6/Problem1Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Problem1Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMzd05D8wR4XFtrjWCva9D9",
+      "authorship_tag": "ABX9TyPkDUYUCQeOwB/cBGmJPKuM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": null,
       "metadata": {
         "id": "Rzff-AqwblWs"
       },
@@ -77,7 +77,7 @@
         "id": "9nDmm_79tWLe",
         "outputId": "29a9941d-82c0-44c9-bed5-cc0ebfe22576"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -379,7 +379,7 @@
         "id": "wI3PCsQHtZmd",
         "outputId": "a9cbbe23-fa75-4923-dcc6-f6c33838324e"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -582,7 +582,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Training Data Preparation for Classification**\n",
+        "**Training Data Preparation for Classification**\n",
         "\n",
         "\n",
         "* For simplicity, only two predictors and the target are retained, as follows:\n",
@@ -612,7 +612,7 @@
         "id": "W3MrBg_Xtd8m",
         "outputId": "a281a6c0-984b-4931-c9de-42f4d7212816"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -823,7 +823,7 @@
         "id": "kstekbactjGQ",
         "outputId": "ddb61728-9cf4-4475-e96b-79530bd4a784"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -863,7 +863,7 @@
         "id": "IWYeOvx7tlTZ",
         "outputId": "d53051c6-bdec-4854-b920-26a9a4233699"
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1078,7 +1078,7 @@
       "metadata": {
         "id": "PeQCNnI-tt6t"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1094,7 +1094,7 @@
         "id": "O2Qm2IWs-NX_",
         "outputId": "dc29c7d6-8a35-429a-e6c3-66b43fa224da"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1126,7 +1126,7 @@
         "id": "JQYk_DdXtyKT",
         "outputId": "f8098c9a-561c-47d1-8381-e6b99abb94bf"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1145,7 +1145,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Training, Plotting, and Printing Decision Trees**"
+        "**Training, Plotting, and Printing Decision Trees**"
       ],
       "metadata": {
         "id": "ojSP1BHFt3k7"
@@ -1162,7 +1162,7 @@
       "metadata": {
         "id": "iRQFC1jNt05D"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1173,13 +1173,13 @@
       "metadata": {
         "id": "6DbPnm1nA9HU"
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Creating function makeDTModel"
+        "Creating function makeDTModel"
       ],
       "metadata": {
         "id": "da2caFeYBBWr"
@@ -1197,13 +1197,13 @@
       "metadata": {
         "id": "afNJ_CVW5OfB"
       },
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Creating function displayTree"
+        "Creating function displayTree"
       ],
       "metadata": {
         "id": "pca3QghkBVMw"
@@ -1221,13 +1221,13 @@
       "metadata": {
         "id": "67pcdVZB5Qm7"
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Creating function displayCM"
+        "Creating function displayCM"
       ],
       "metadata": {
         "id": "02s4Cmp3BdiF"
@@ -1241,22 +1241,21 @@
         "  predictions = classifier.predict(X_test)\n",
         "  confusionmatrix = confusion_matrix(y_true=y_test, y_pred = predictions)\n",
         "  print(confusionmatrix)\n",
-        "  \n",
         "  sns.heatmap(confusionmatrix, annot=True, linewidths=.5, square = True, cmap = 'RdYlBu_r', fmt='0.4g');\n",
         "  plt.ylabel('Actual label')\n",
         "  plt.xlabel('Predicted label')\n",
-        "  plt.title(\"Cart classifier1\")\n"
+        "  plt.title(\"Cart classifier1\")"
       ],
       "metadata": {
         "id": "_VgbPq0O5Sp6"
       },
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Creating function compareModels"
+        "Creating function compareModels"
       ],
       "metadata": {
         "id": "hCbS_0v6BmEm"
@@ -1268,23 +1267,17 @@
         "# create and display plots of side-by-side model comparisons\n",
         "def compareModels(cart_classifier, c5_classifier):\n",
         "  labels = ['CART', 'C5.0']\n",
-        "\n",
         "  # Record CART's classification accuracy on tarining and test datasets\n",
         "  cart_train_score1 = round(cart_classifier.score(X_train, y_train), 2) # training score\n",
         "  cart_test_score1 = round(cart_classifier.score(X_test, y_test), 2)   # testing score\n",
-        "\n",
         "  print (\"CART Training and Testing scores: %.2f, %.2f\" %  (cart_train_score1, cart_test_score1))\n",
-        "\n",
-        "\n",
         "  # Record C5's classification accuracy on tarining and test datasets\n",
         "  c5_train_score1 = round(c5_classifier1.score(X_train, y_train), 2) # training score\n",
         "  c5_test_score1 = round(c5_classifier1.score(X_test, y_test), 2)   # testing score\n",
-        "\n",
         "  print (\"C5.0 Training and Testing scores: %.2f, %.2f\" %  (c5_train_score1, c5_test_score1))\n",
         "\n",
         "  training_scores = [cart_train_score1, c5_train_score1]\n",
         "  testing_scores =  [cart_test_score1, c5_test_score1]\n",
-        "\n",
         "  x = np.arange(2)  # the label locations\n",
         "  width = 0.35  # the width of the bars\n",
         "\n",
@@ -1298,20 +1291,19 @@
         "  ax.set_ylim(0,1)\n",
         "  ax.set_xticklabels(labels)\n",
         "  ax.legend(bbox_to_anchor = (1.3, 1.0), loc='upper right')\n",
-        "\n",
         "  plt.title('Model Comparisons')\n",
-        "  plt.show()\n"
+        "  plt.show()"
       ],
       "metadata": {
         "id": "ZvK3UteSBu5z"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Analyze the effect of the parameters max_depth and max_leaf_nodes on classification accuracy. Plot the obtained accuracy values for various choices of max_depth (e.g. 2, 3, 4, none) and max_leaf_nodes (3, 4, 5, none).\n"
+        "Analyze the effect of the parameters max_depth and max_leaf_nodes on classification accuracy. Plot the obtained accuracy values for various choices of max_depth (e.g. 2, 3, 4, none) and max_leaf_nodes (3, 4, 5, none).\n"
       ],
       "metadata": {
         "id": "ei2RU9BHE-F4"
@@ -1327,13 +1319,13 @@
       "metadata": {
         "id": "70-BD6ffE_-_"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# DisplayTree, DisplayCM and classification accuracy for cart_classifier1 and c5_classifier1"
+        "DisplayTree, DisplayCM and classification accuracy for cart_classifier1 and c5_classifier1"
       ],
       "metadata": {
         "id": "Mgim10okFHsP"
@@ -1343,7 +1335,6 @@
       "cell_type": "code",
       "source": [
         "# Display tree for cart_classifier1\n",
-        "\n",
         "plt.figure(figsize=(10, 8), dpi=80)\n",
         "plt.subplot(1,2,1)\n",
         "displayTree(cart_classifier1, X)\n",
@@ -1358,7 +1349,7 @@
         "id": "b05yia_SFNuK",
         "outputId": "929fdd43-c7b0-4c15-e318-fce7c2a8e8ad"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1392,7 +1383,7 @@
           "height": 532
         }
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1413,11 +1404,10 @@
       "source": [
         "# Display CM for cart_classifier1\n",
         "plt.figure(figsize=(12, 8), dpi=80)\n",
-        "\n",
         "print('Confusion matrix of cart_classifier1')\n",
         "plt.subplot(1,2,1)\n",
         "cart_cm1 = displayCM(cart_classifier1, X_train, y_train, X_test, y_test)\n",
-        "plt.title(\"Cart classifier1\")\n"
+        "plt.title(\"Cart classifier1\")"
       ],
       "metadata": {
         "colab": {
@@ -1427,7 +1417,7 @@
         "id": "6z4XQ5r_FTYr",
         "outputId": "14b00f5a-c9c7-4f74-f7f2-883b419baaa0"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1480,7 +1470,7 @@
           "height": 587
         }
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1529,7 +1519,7 @@
         "id": "4mZvFwLXFYyh",
         "outputId": "5b4b7b98-0882-4d9e-d860-2a78856078ea"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1565,7 +1555,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# DisplayTree, DisplayCM and classification accuracy for cart_classifier2 and c5_classifier2"
+        "DisplayTree, DisplayCM and classification accuracy for cart_classifier2 and c5_classifier2"
       ],
       "metadata": {
         "id": "ypM_9SHfFh9-"
@@ -1576,19 +1566,18 @@
       "source": [
         "# Taking max_depth=3 and max_leaf_nodes=4\n",
         "cart_classifier2 = makeDTModel(\"gini\", X_train, y_train,3,5)\n",
-        "c5_classifier2 = makeDTModel(\"entropy\", X_train, y_train,3,5)\n"
+        "c5_classifier2 = makeDTModel(\"entropy\", X_train, y_train,3,5)"
       ],
       "metadata": {
         "id": "781De1fyMd1b"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Display tree for cart_classifier2\n",
-        "\n",
         "plt.figure(figsize=(15, 8), dpi=80)\n",
         "plt.subplot(1,2,1)\n",
         "displayTree(cart_classifier2, X)\n",
@@ -1603,7 +1592,7 @@
         "id": "p3ruO1FXFm3R",
         "outputId": "be04a2c3-8db4-46c9-b161-ef6a231b4b21"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1623,7 +1612,6 @@
       "cell_type": "code",
       "source": [
         "# Display tree for c5_classifier2\n",
-        "\n",
         "plt.figure(figsize=(15, 8), dpi=80)\n",
         "plt.subplot(1,2,2)\n",
         "displayTree(c5_classifier2, X)\n",
@@ -1638,7 +1626,7 @@
           "height": 532
         }
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1659,12 +1647,10 @@
       "source": [
         "# Display CM for cart_classifier2\n",
         "plt.figure(figsize=(12, 8), dpi=80)\n",
-        "\n",
         "print('Confusion matrix for cart_classifier2')\n",
         "plt.subplot(1,2,1)\n",
         "cart_cm1 = displayCM(cart_classifier2, X_train, y_train, X_test, y_test)\n",
-        "plt.title(\"Cart classifier2\")\n",
-        "\n"
+        "plt.title(\"Cart classifier2\")"
       ],
       "metadata": {
         "colab": {
@@ -1674,7 +1660,7 @@
         "id": "z14ypfZuFqyW",
         "outputId": "11915c17-455f-4355-8bee-1d132ac190cf"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1727,7 +1713,7 @@
           "height": 587
         }
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1776,7 +1762,7 @@
         "id": "UhaMzimRFvMp",
         "outputId": "ddbd1d1d-f418-4877-94dd-8a98b57355bf"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1812,7 +1798,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# DisplayTree, DisplayCM and classification accuracy for cart_classifier3 and c5_classifier3"
+        "DisplayTree, DisplayCM and classification accuracy for cart_classifier3 and c5_classifier3"
       ],
       "metadata": {
         "id": "eMIZ1k-RF20p"
@@ -1823,19 +1809,18 @@
       "source": [
         "# Taking max_depth=4 and max_leaf_nodes=5\n",
         "cart_classifier3 = makeDTModel(\"gini\", X_train, y_train,4,6)\n",
-        "c5_classifier3 = makeDTModel(\"entropy\", X_train, y_train,4,6)\n"
+        "c5_classifier3 = makeDTModel(\"entropy\", X_train, y_train,4,6)"
       ],
       "metadata": {
         "id": "iqcmRD6lMiM2"
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Display tree for cart_classifier3\n",
-        "\n",
         "plt.figure(figsize=(15, 8), dpi=80)\n",
         "plt.subplot(1,2,1)\n",
         "displayTree(cart_classifier3, X)\n",
@@ -1850,7 +1835,7 @@
         "id": "-1mY7MguF7h-",
         "outputId": "0321bbc9-9e04-4160-bb32-05788e1fc87c"
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1869,9 +1854,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "# Display tree for c5_classifier3\n",
-        "\n",
         "plt.figure(figsize=(15, 8), dpi=80)\n",
         "plt.subplot(1,2,2)\n",
         "displayTree(c5_classifier3, X)\n",
@@ -1886,7 +1869,7 @@
           "height": 532
         }
       },
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1907,12 +1890,10 @@
       "source": [
         "# Display CM for cart_classifier3\n",
         "plt.figure(figsize=(12, 8), dpi=80)\n",
-        "\n",
         "print('Confusion matrix for cart_classifier3')\n",
         "plt.subplot(1,2,1)\n",
         "cart_cm1 = displayCM(cart_classifier3, X_train, y_train, X_test, y_test)\n",
-        "plt.title(\"Cart classifier3\")\n",
-        "\n"
+        "plt.title(\"Cart classifier3\")"
       ],
       "metadata": {
         "colab": {
@@ -1922,7 +1903,7 @@
         "id": "TeUriORUF_jA",
         "outputId": "b15305be-7931-4067-d638-cfa789c15f93"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1975,7 +1956,7 @@
           "height": 587
         }
       },
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2024,7 +2005,7 @@
         "id": "GEMrLfa7GDeT",
         "outputId": "b5ce2ddf-41a7-4744-ff63-56d4a6ac8c1a"
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2060,7 +2041,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# DisplayTree, DisplayCM and classification accuracy for cart_classifier4 and c5_classifier4"
+        "DisplayTree, DisplayCM and classification accuracy for cart_classifier4 and c5_classifier4"
       ],
       "metadata": {
         "id": "O8s5tHVl5UrF"
@@ -2076,13 +2057,12 @@
       "metadata": {
         "id": "sDu3xynaMlyy"
       },
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "# Display tree for c5_classifier4\n",
         "plt.figure(figsize=(15, 8), dpi=80)\n",
         "plt.subplot(1,2,2)\n",
@@ -2098,7 +2078,7 @@
           "height": 532
         }
       },
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2118,7 +2098,6 @@
       "cell_type": "code",
       "source": [
         "# Display tree for cart_classifier4\n",
-        "\n",
         "plt.figure(figsize=(15, 8), dpi=80)\n",
         "plt.subplot(1,2,1)\n",
         "displayTree(cart_classifier4, X)\n",
@@ -2133,7 +2112,7 @@
         "id": "5zrTNJPQ5Wmx",
         "outputId": "6f8e0940-5e41-4ff5-f25a-25dffb60ea3f"
       },
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2167,7 +2146,7 @@
           "height": 587
         }
       },
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2210,7 +2189,7 @@
         "print('Confusion matrix for c5_classifier3')\n",
         "plt.subplot(1,2,1)\n",
         "cart_cm1 = displayCM(cart_classifier4, X_train, y_train, X_test, y_test)\n",
-        "plt.title(\"Cart classifier4\")\n"
+        "plt.title(\"Cart classifier4\")"
       ],
       "metadata": {
         "colab": {
@@ -2220,7 +2199,7 @@
         "id": "Ha9inu6r5Yf4",
         "outputId": "c043f85e-cd05-436a-bcef-dc2b40851754"
       },
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2269,7 +2248,7 @@
         "id": "ZZs1-sDL5a8Y",
         "outputId": "1842c96f-a70e-4c45-d705-ae20dff19037"
       },
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
