--- a/HW6/Problem1Python.ipynb
+++ b/HW6/Problem1Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Problem1Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPkDUYUCQeOwB/cBGmJPKuM",
+      "authorship_tag": "ABX9TyPcK6Hi+CIfHSodswUnhXWK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
       "cell_type": "markdown",
       "source": [
         "Importing csv file from Github repositiory HW6 folder.\n",
-        "Printing the imported data set wineflagDF."
+        "Printing the imported data set adult_trainingDF."
       ],
       "metadata": {
         "id": "X4P1keJX601c"
@@ -1179,7 +1179,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Creating function makeDTModel"
+        "**Creating function makeDTModel**"
       ],
       "metadata": {
         "id": "da2caFeYBBWr"
@@ -1203,7 +1203,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Creating function displayTree"
+        "**Creating function displayTree**"
       ],
       "metadata": {
         "id": "pca3QghkBVMw"
@@ -1227,7 +1227,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Creating function displayCM"
+        "**Creating function displayCM**"
       ],
       "metadata": {
         "id": "02s4Cmp3BdiF"
@@ -1255,7 +1255,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Creating function compareModels"
+        "**Creating function compareModels**"
       ],
       "metadata": {
         "id": "hCbS_0v6BmEm"
@@ -1325,7 +1325,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "DisplayTree, DisplayCM and classification accuracy for cart_classifier1 and c5_classifier1"
+        "**DisplayTree, DisplayCM and classification accuracy for cart_classifier1 and c5_classifier1**"
       ],
       "metadata": {
         "id": "Mgim10okFHsP"
@@ -1455,8 +1455,8 @@
     {
       "cell_type": "code",
       "source": [
-        "plt.figure(figsize=(12, 8), dpi=80)\n",
         "# Display CM for c5_classifier1\n",
+        "plt.figure(figsize=(12, 8), dpi=80)\n",
         "print('Confusion matrix of c5_classifier1')\n",
         "plt.subplot(1,2,2)\n",
         "c5_cm1 = displayCM(c5_classifier1, X_train, y_train, X_test, y_test)\n",
@@ -1555,7 +1555,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "DisplayTree, DisplayCM and classification accuracy for cart_classifier2 and c5_classifier2"
+        "**DisplayTree, DisplayCM and classification accuracy for cart_classifier2 and c5_classifier2**"
       ],
       "metadata": {
         "id": "ypM_9SHfFh9-"
@@ -1798,7 +1798,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "DisplayTree, DisplayCM and classification accuracy for cart_classifier3 and c5_classifier3"
+        "**DisplayTree, DisplayCM and classification accuracy for cart_classifier3 and c5_classifier3**"
       ],
       "metadata": {
         "id": "eMIZ1k-RF20p"
@@ -2041,7 +2041,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "DisplayTree, DisplayCM and classification accuracy for cart_classifier4 and c5_classifier4"
+        "**DisplayTree, DisplayCM and classification accuracy for cart_classifier4 and c5_classifier4**"
       ],
       "metadata": {
         "id": "O8s5tHVl5UrF"
