--- a/HW6/Problem1Python.ipynb
+++ b/HW6/Problem1Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Problem1Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPcK6Hi+CIfHSodswUnhXWK",
+      "authorship_tag": "ABX9TyPo2wqfgNBvjBhxomJOATEs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -368,7 +368,6 @@
       "cell_type": "code",
       "source": [
         "# Printing first 5 rows of the adult_training data frame. # We will use Income as the target class in this exercise\n",
-        "\n",
         "adult_trainingDF.head()"
       ],
       "metadata": {
@@ -2288,7 +2287,7 @@
         "\n",
         "\n",
         "> From the above 4 classification models:\n",
-        "1.   All four models with different max_depth and max_leaf_node values have different accuarate values.\n",
+        "1.   All models with different max_depth and max_leaf_node values have different accuarate values.\n",
         "2.   Increasing the max_depth and max_leaf_node values increases the accuracy of cart_classifier but not the accuracy of c5_classifier.\n",
         "3.   For every model cart_classifier(Gini Index) accuracy is more compared to c5_classifier(Entropy) accuracy.\n",
         "\n",
